findUser - GET /users?username=x
